# ticket-blockchain

./: README.md
tblock/: Cargo.toml  config.toml  heaptrack.tblock.59633.zst  rWatch.sh
tblock/gblock/: Cargo.toml
tblock/gblock/src/: lib.rs  ticket.rs
tblock/gblock/src/blockchain/: block.rs  chain.rs  pow.rs
tblock/gblock/src/networking/: auth.rs  mod.rs  p2p.rs
tblock/src/: main.rs  utils.rs
